# pyoma

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  HOGsSeqCV.html  OMAGSeqCV.html  README.md  models.py  nebion.sh  pyproject.toml  release_notes.txt  requirements.txt  setup.cfg  setup.py  startup.py  test-requirements.txt  tox.ini  utils.py
.github/workflows/: python-app.yml  run-tests.yml  upload-release.yml
docs/: Makefile  browser-convert.rst  browser-query.rst  conf.py  index.rst  inference.rst  make.bat  models.rst  setup.rst
notebooks/: sanitychecks.ipynb
pyoma/: __init__.py  common.py  convert.drw  convert.py  db.py  hpc.py  locus_parser.py
pyoma/application/: enrichment.py
pyoma/browser/: KmerEncoder.py  OrthoXMLSplitter.py  ancestral_genome.py  ancestral_synteny.py  check_db_consistency.py  compute_cache.py  convert.drw  convert.py  convert_omastandalone.drw  convert_omastandalone.py  db.py  db_contrib.py  decorators.py  exceptions.py  external.py  geneontology.py  hoghelper.py  hogidmap.py  homoeologs.py  idmapper.py  linkout.py  locus_parser.py  models.py  oma_standalone.drw  sanitychecks.ipynb  sanitychecks.py  search.py  suffixsearch.py  synteny.py  tablefmt.py  xref_contrib.py
pyoma/inference/: algo.py  db.py  tabledef.py
pyoma/orthoxml/: compare.py
pyoma/test/: test_import.py  test_locusparser.py  test_xrefs.py
test/: test_db.py  test_models.py
tests/: test_common.py  test_db.py  test_locusparser.py  test_models.py  test_xrefs.py
tests/application/: test_enrichment.py
tests/browser/: TestDb.h5  TestDb.h5.idx  test_db.py  (+14 more)
(+7 files in other folders)
