[bumpversion]
current_version = 0.11.1
commit = True
tag = False

[bumpversion:file:pyoma/__init__.py]

[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE
description-file = README.md
